--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "google/apiclient": "^2.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
-        "ramsey/uuid": "^3.9"
+        "ramsey/uuid": "^3.9",
+        "spatie/laravel-cors": "^1.6"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
