--- a/composer.json
+++ b/composer.json
@@ -8,24 +8,24 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.3",
         "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^2.0",
         "google/apiclient": "^2.0",
         "guzzlehttp/guzzle": "~6.0",
         "inspector-apm/inspector-laravel": "^4.5",
-        "laravel/framework": "6.3",
-        "laravel/tinker": "^1.0",
-        "ramsey/uuid": "^3.9",
-        "spatie/laravel-cors": "^1.6"
+        "laravel/framework": "^7.0",
+        "laravel/tinker": "^2.0",
+        "ramsey/uuid": "^3.9"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
         "brainmaestro/composer-git-hooks": "^2.8",
-        "facade/ignition": "^1.4",
+        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
