Remove extra line at start of cors file

--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,7 @@
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "@php artisan ide-helper:generate",
             "@php artisan ide-helper:meta"
-        ]
+        ],
+        "cghooks": "vendor/bin/cghooks"
     }
 }
