TSP-6-17: Add laravel/ui package for managing auth

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "inspector-apm/inspector-laravel": "^4.5",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.4",
         "ramsey/uuid": "^3.9"
     },
     "require-dev": {
