--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
+        "eslint": "^7.17.0",
+        "eslint-plugin-vue": "^7.4.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.4",
         "lodash": "^4.17.13",
