TSP-0: Add gitautodeploy file to repo

--- a/.env.testing
+++ b/.env.testing
@@ -47,3 +47,6 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 CONNECTION_COMMAND_HOST=mockHost
+
+CLOUDWAYS_API_KEY=
+CLOUDWAYS_EMAIL=
